# xdg-desktop-portal-hyprland

./: .gitignore  CMakeLists.txt  README.md  meson_options.txt
contrib/: config.sample
hyprland-share-picker/: main.cpp  mainpicker.ui
src/: includes.hpp  meson.build
src/core/: EventLoopManager.cpp  EventLoopManager.hpp  PortalManager.cpp  PortalManager.hpp
src/pipewire/: PipewireConnection.cpp  PipewireConnection.hpp
src/portals/: GlobalShortcuts.cpp  GlobalShortcuts.hpp  Screencopy.cpp  Screencopy.hpp  ScreencopyPicker.cpp  ScreencopyPicker.hpp  ScreencopySession.hpp  Screenshot.cpp  Screenshot.hpp
src/render/: Renderer.cpp  Renderer.hpp
src/shaders/: rotate.comp
src/shared/: ScreencopyShared.cpp  ScreencopyShared.hpp  ToplevelManager.cpp  VulkanTransform.cpp  VulkanTransform.hpp
tests/: hyprland_rotated.conf  manual_test.sh  mock_picker.sh  portal_client.py  pyproject.toml  reproduce_issue.sh
