[project]
name = "xdph-tests"
version = "0.1.0"
description = "Integration tests for xdg-desktop-portal-hyprland rotation support"
requires-python = ">=3.10"
dependencies = [
    "dbus-python>=1.3.2",
    "PyGObject>=3.42.0",
]

[project.optional-dependencies]
dev = [
    "pillow>=10.0.0",
]

[tool.uv]
dev-dependencies = [
    "pillow>=10.0.0",
]
